# noten

./: Cargo.toml  Makefile  README.md
noten/: Cargo.toml
noten/src/: noten.rs
tests/: Cargo.toml  wasm
tests/src/: contract.rs  lib.rs
tests/wasm/: noten.wasm
